# telegram-bot-mcp

./: .env.example  .gitignore  Dockerfile  README.md  amvera.yml  mcp.example.json  pyproject.toml  requirements.txt  server.py
