[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "telegram-bot-mcp"
version = "1.0.0"
description = "MCP server to control a Telegram bot"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Oleg Stefanov", email = "coderr.oleg@gmail.com"},
]

dependencies = [
    "mcp>=1.0.0",
    "python-telegram-bot==22.1",
    "uvicorn>=0.15.0",
    "python-dotenv>=0.19.0", 
    "nest-asyncio==1.6.0"
]

[project.optional-dependencies]
dev = [
    "uvicorn>=0.32.1",
]

[project.scripts]
server = "server:main"

[tool.hatch.build.targets.wheel]
packages = ["."] 